# National-Scaling-Analysis

./: .gitignore  README.md  demography.csv  environment.yml  population.csv  pyproject.toml
notebooks/: API_Capstone.ipynb
reports/figures/: interactive_scaling_dashboard.html
src/scaling_analysis/: config.py  data.py  features.py  models.py  pipeline.py  scaling_config.yaml  viz.py
